--- a/app/src/main/res/layout/activity_request_detail.xml
+++ b/app/src/main/res/layout/activity_request_detail.xml
@@ -120,7 +120,7 @@
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="40dp"
                 android:layout_marginHorizontal="40dp"
-                app:cardCornerRadius="30dp"
+                app:cardCornerRadius="15dp"
                 app:cardElevation="4dp">
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -137,7 +137,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/request_units"
+                        android:text="@string/request_quantity"
                         android:layout_centerHorizontal="true"
                         android:textSize="17sp"
                         android:textColor="#70c7b7"/>
@@ -182,7 +182,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="@string/request_cancel_request"
-        android:onClick="cancelRequest"
+        android:onClick="showConfirmationDialog"
         android:textColor="@color/white"
         android:paddingHorizontal="20dp"
         android:background="@drawable/roundbutton"
