--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -118,16 +118,12 @@
                     android:src="@drawable/dotted_line"
                     android:layout_marginTop="10dp"/>
             </LinearLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:layout_constraintVertical_bias="0.0"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/ll_coupon"/>
+                android:layout_marginTop="10dp"/>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -135,12 +131,7 @@
                 android:paddingRight="30dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="40dp"
-                android:layout_marginBottom="50dp"
-                app:layout_constraintVertical_bias="0.0"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/recyler_view"
-                app:layout_constraintBottom_toBottomOf="parent">
+                android:layout_marginBottom="50dp">
                 <TextView
                     android:id="@+id/coupon_text"
                     android:layout_width="wrap_content"
