--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -118,43 +118,24 @@
                     android:layout_marginTop="6dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/profile_mr"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="15sp"
-                        android:background="@drawable/boundary_green_back"
-                        android:layout_weight="1"
-                        android:paddingHorizontal="20dp"
-                        android:paddingVertical="10dp"/>
                     <EditText
                         android:id="@+id/name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="100"
+                        android:layout_weight="20"
                         android:hint="@string/profile_name_hint"
-                        android:enabled="false"
                         android:maxLines="1"
                         android:textSize="15sp"
-                        android:layout_marginLeft="10dp"
                         android:textColor="@color/black"
                         android:paddingVertical="10dp"
                         android:paddingHorizontal="20dp"
                         android:background="@drawable/boundary_grey_back"/>
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_check"
-                        android:layout_marginLeft="10dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="1"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/profile_verified"
-                        android:textColor="@color/blueLight"
-                        android:layout_marginLeft="10dp"
+                        android:id="@+id/edit_name"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/ic_edit"
+                        android:layout_marginLeft="15dp"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"/>
                 </LinearLayout>
