--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -15,5 +15,17 @@
             android:textSize="16sp"
             android:id="@+id/no_requests"
             android:layout_centerInParent="true"/>
+        <Button
+            android:id="@+id/settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="30dp"
+            android:layout_centerHorizontal="true"
+            android:text="@string/pay_settings"
+            android:textColor="@color/white"
+            android:paddingHorizontal="40dp"
+            android:paddingVertical="5dp"
+            android:background="@drawable/pay_settings_back"/>
     </RelativeLayout>
 </FrameLayout>
