--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -146,6 +146,7 @@
                     android:layout_alignParentRight="true"
                     android:textColor="@color/colorPrimary"
                     android:text="-"/>
+                <!--
                 <TextView
                     android:id="@+id/tax_text"
                     android:layout_width="wrap_content"
@@ -181,14 +182,14 @@
                     android:layout_marginTop="7dp"
                     android:textSize="14sp"
                     android:layout_below="@id/tax_amount"
-                    android:text="-"/>
+                    android:text="-"/>-->
                 <ImageView
                     android:id="@+id/dotted_line_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/dotted_line"
                     android:layout_marginTop="10dp"
-                    android:layout_below="@id/others_text"/>
+                    android:layout_below="@id/coupon_text"/>
                 <TextView
                     android:id="@+id/total_text"
                     android:layout_width="wrap_content"
