--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -77,6 +77,7 @@
                 </LinearLayout>
 
                 <ImageView
+                    android:id="@+id/location_button"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:background="@drawable/searchbar_back"
