--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,23 +4,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient"
+    android:background="@color/white"
     tools:context="com.farmerapp.Activities.SplashActivity">
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/banner"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        <TextView
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        >
+        <androidx.cardview.widget.CardView
+            android:layout_alignParentTop="true"
+            android:id="@+id/brand_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/splash_title"
-            android:textColor="@color/white"
-            android:textSize="35sp"
-            android:textStyle="bold"
-            />
-    </LinearLayout>
+            android:layout_centerHorizontal="true"
+            app:cardCornerRadius="15dp">
+            <ImageView
+                android:layout_width="85dp"
+                android:layout_height="85dp"
+                android:src="@drawable/logo"/>
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/brand_name"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_below="@id/brand_logo"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif-medium"
+            android:includeFontPadding="false"
+            android:text="freshOk"
+            android:textColor="#22d4b4"
+            android:textSize="35dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="13dp"
+            android:text="Kisan"
+            android:includeFontPadding="false"
+            android:textColor="#22d4b4"
+            android:fontFamily="sans-serif-medium"
+            android:layout_below="@id/brand_name"
+            android:layout_alignRight="@+id/brand_name"
+            android:textSize="12sp" />
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
