--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,18 +30,17 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
-            <include
-                layout="@layout/offers_temporary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/banner_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
                 app:layout_constraintVertical_bias="0.0"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 app:layout_constraintTop_toTopOf="@+id/gradient"
                 app:layout_constraintBottom_toBottomOf="@id/gradient"
                 app:layout_constraintRight_toRightOf="@id/gradient"
                 app:layout_constraintLeft_toLeftOf="@id/gradient">
-
-            </include>
+            </androidx.recyclerview.widget.RecyclerView>
             <LinearLayout
                 android:id="@+id/ll"
                 android:layout_marginHorizontal="20dp"
