search title  synced to freshOk

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -58,17 +58,18 @@
                 android:layout_marginLeft="20dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"/>
+
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/search_toolbar_title"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:layout_toRightOf="@+id/back"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"/>
+                android:layout_marginLeft="20dp"
+                android:layout_toRightOf="@+id/back"
+                android:fontFamily="sans-serif-medium"
+                android:text="freshOk"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
     <androidx.recyclerview.widget.RecyclerView
