--- a/app/src/main/res/layout/banner_item_layout.xml
+++ b/app/src/main/res/layout/banner_item_layout.xml
@@ -1,29 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginHorizontal="20dp"
-    app:cardCornerRadius="8dp"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
+    app:cardCornerRadius="3dp"
     app:cardElevation="4dp">
 
         <RelativeLayout
             android:id="@+id/veg_offer"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:src="#11000000"
-                android:scaleType="centerCrop"/>
-            <TextView
-                android:layout_width="200dp"
+                android:layout_width="270dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/title"
-                android:textSize="28sp"
-                android:textColor="@color/white"
-                android:paddingLeft="20dp"
-                android:gravity="center_vertical" />
+                android:src="#11000000"/>
         </RelativeLayout>
 </androidx.cardview.widget.CardView>
