--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,7 @@
             <ImageView
                 android:id="@+id/gradient"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="210dp"
                 android:src="@drawable/gradient"
                 app:layout_constraintVertical_bias="0.0"
                 app:layout_constraintTop_toTopOf="parent"
@@ -33,9 +33,10 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/banner_recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintVertical_bias="0.0"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="40dp"
                 app:layout_constraintTop_toTopOf="@+id/gradient"
                 app:layout_constraintBottom_toBottomOf="@id/gradient"
                 app:layout_constraintRight_toRightOf="@id/gradient"
@@ -46,7 +47,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="175dp"
+                android:layout_marginTop="185dp"
                 app:layout_constraintVertical_bias="0.0"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -149,31 +150,7 @@
                             android:background="@drawable/curved_back"/>
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="85dp"
-                    android:layout_marginTop="20dp"
-                    app:cardCornerRadius="25dp"
-                    app:cardElevation="4dp">
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/vege"
-                            android:scaleType="centerCrop"/>
-                        <TextView
-                            android:layout_width="218dp"
-                            android:layout_height="match_parent"
-                            android:text="@string/main_sell_crops"
-                            android:textSize="20sp"
-                            android:textColor="@color/white"
-                            android:paddingLeft="20dp"
-                            android:gravity="center_vertical"
-                            android:background="@drawable/curved_back"/>
-                    </RelativeLayout>
-                </androidx.cardview.widget.CardView>
+
             </LinearLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/suggested_crops_recylerview"
